<resources>
    <string name="app_name" translatable="false">DAS Pictures</string>
    <string name="NombreUsuario">Nombre de usuario...</string>
    <string name="Contraseña">Contraseña...</string>
    <string name="Entrar">Entrar</string>
    <string name="O">o</string>
    <string name="CrearCuenta">Crear cuenta</string>
    <string name="ContraseñaDeNuevo">Contraseña de nuevo...</string>
    <string name="Registrarse">Registrarse</string>
    <string name="SeleccionarOpcion">Selecciona una de las siguientes opciones</string>
    <string name="SubirFoto">Subir foto</string>
    <string name="DesdeCamara">Desde la cámara</string>
    <string name="DesdeGaleria">Desde la galería</string>
    <string name="Guardados">Guardados</string>
    <string name="VerCompartidas">Ver compartidas conmigo</string>
    <string name="BuscarGente">Buscar gente</string>
    <string name="Amigos">Amigos</string>
    <string name="Idioma">Idioma</string>
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="AñadirAmigos">AÑADIR AMIGOS</string>
    <string name="BuscarAmigos">Buscar nuevos amigos</string>
    <string name="BuscarPorNombre">Buscar por nombre...</string>
    <string name="Buscar">Buscar</string>
    <string name="EnviarSolicitud">Enviar\nsolicitud</string>
    <string name="SolicitudesPendientes">Solicitudes de amistad pendientes</string>
    <string name="Eliminar">Eliminar</string>
    <string name="NoAmigosAgregados">No tienes amigos agregados.</string>
    <string name="EscribeBuscador">Escribe algo en el buscador.</string>
    <string name="NoCoincidencias">No existen coincidencias.</string>
    <string name="NoSolicitudes">No hay solicitudes pendientes.</string>
    <string name="RellenarCampos">Rellena todos los campos.</string>
    <string name="UserPassIncorrectos">Usuario o contraseña incorrectos.</string>
    <string name="NuevoToken">Nuevo token añadido.</string>
    <string name="PassDiferentes">Las contraseñas no coinciden.</string>
    <string name="UsuarioRepetido">Ya existe ese nombre de usuario.</string>
    <string name="UsuarioRegistrado">Usuario registrado.</string>
    <string name="AmigoEliminado">Amigo eliminado.</string>
    <string name="SolicitudEnviada">Solicitud enviada.</string>
    <string name="SolicitudAceptada">Solicitud aceptada.</string>
    <string name="SolicitudRechazada">Solicitud rechaza.</string>
    <string name="SolicitudRecibida">Solicitud de amistad recibida</string>
    <string name="Hola">Hola</string>
    <string name="QuiereAmigo">quiere ser tu amigo, toca para revisar las solicitudes.</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Rechazar">Rechazar</string>
    <string name="PreferenciasUsuario">Preferencias usuario</string>
    <string name="SeleccionaIdioma">Selecciona el idioma:</string>
    <string name="Español">Español</string>
    <string name="Ingles">Inglés</string>
    <string name="Euskera">Euskera</string>
    <string name="QueIdioma">¿Qué idioma quieres seleccionar?</string>
    <string name="Idiomas">Idiomas</string>
    <string name="MisAmigos">MIS AMIGOS</string>
    <string name="Preferencias">Preferencias</string>
    <string name="PuntosInteres">Puntos de interés</string>
    <string name="PuntosInteresTitulo">PUNTOS DE INTERÉS</string>
    <string name="Marcadores">Marcadores:</string>
    <string name="NoPermisoLocalizacion">No hay permisos para acceder a la localización.</string>
    <string name="PermisosLocalizacion">Permisos de localización necesarios</string>
    <string name="RazonPermisosLocalizacion">Es necesario dar permisos de acceso a la localización del dispositivo si se quieren marcar puntos de interés.</string>
    <string name="DeAcuerdo">De acuerdo</string>
    <string name="GeolocalizacionDesconocida">Geolocalización desconocida.</string>
    <string name="NoUbicacion">No se ha podido obtener la ubicación.</string>
    <string name="MarcadorGuardado">Marcador guardado.</string>
    <string name="MarcadorEliminado">Marcador eliminado.</string>
    <string name="EliminarMarcador">Eliminar marcador</string>
    <string name="SeguroEliminarMarcador">¿Estás seguro de que deseas eliminar este marcador?</string>
    <string name="Si">Sí</string>
    <string name="No">No</string>
    <string name="NoMarcador">No hay ningún marcador.</string>
    <string name="IntroduceMarcador">Introduce un título para el marcador:</string>
    <string name="EscribirTitulo">Escribir título...</string>
    <string name="CrearNuevoMarcador">Crear nuevo marcador</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Hecho">Hecho</string>
    <string name="TipoVista">Tipo de vista:</string>
    <string name="Mapa">Mapa</string>
    <string name="Satelite">Satélite</string>
    <string name="Hibrido">Híbrido</string>
    <string name="Terreno">Terreno</string>
    <string name="ConfiguracionWidget">CONFIGURACIÓN DEL WIDGET</string>
    <string name="Añadir">Añadir</string>
    <string name="NoPermisoCamara">No hay permisos para acceder a la cámara.</string>
    <string name="PermisosCamara">Permisos de cámara necesarios</string>
    <string name="RazonPermisosCamara">Es necesario dar permisos de acceso a la cámara si se quieren sacar fotos.</string>
    <string name="SubirFotoTit">SUBIR FOTO</string>
    <string name="InsertarTitulo">Insertar título:</string>
    <string name="InsertarDescripcion">Insertar descripción:</string>
    <string name="Titulo">Título...</string>
    <string name="Descripcion">Descripción...</string>
    <string name="Subir">Subir</string>
    <string name="SacarOtra">Sacar otra</string>
    <string name="ElegirOtra">Elegir otra</string>
    <string name="MisFotos">MIS FOTOS</string>
    <string name="EscribeTitulo">Escribe un título a la foto.</string>
    <string name="DescripcionLarga">La descripción debe tener menos de 255 caracteres.</string>
    <string name="NoFotosSubidas">No hay ninguna foto subida.</string>
    <string name="InsertarGeolocalizacion">Insertar geolocalización actual</string>
    <string name="FotoSubida">Foto subida correctamente.</string>
    <string name="InfoFoto">INFORMACIÓN DE LA FOTO</string>
    <string name="TituloI">Título:</string>
    <string name="DescripcionI">Descripción:</string>
    <string name="FechaSubidaI">Fecha de subida:</string>
    <string name="MostrarEditarUbicacion">MOSTRAR/EDITAR UBICACIÓN</string>
    <string name="Guardar">Guardar</string>
    <string name="FotoEditada">Foto editada correctamente.</string>
    <string name="Editar">Editar</string>
    <string name="FotoEliminada">Foto eliminada correctamente.</string>
    <string name="FotosCompartidas">FOTOS COMPARTIDAS CONMIGO</string>
    <string name="ConQuien">¿Con qué amigos quieres compartir la foto?</string>
    <string name="FotoCompartida">Foto compartida.</string>
    <string name="FotoNoCompartida">Foto no compartida.</string>
    <string name="NoAmigosCompartir">No hay amigos para compartir la foto.</string>
    <string name="NoFotosCompartidas">No te han compartido ninguna foto.</string>
    <string name="CompartidaPor">Por:</string>
    <string name="EliminarCompartida">Eliminar foto compartida</string>
    <string name="SeguroEliminarCompartida">¿Estás seguro de que deseas eliminar esta foto compartida?</string>
    <string name="CompartidaEliminada">Foto compartida eliminada.</string>
    <string name="ComentarFoto">Comentar foto</string>
    <string name="IntroduceComentario">Introduce un comentario para la foto:</string>
    <string name="EscribirComentario">Escribir comentario...</string>
    <string name="ComentarioEnviado">Comentario enviado.</string>
    <string name="HaComentado">ha comentado en:</string>
    <string name="Solicitud">Solicitud</string>
    <string name="Comentario">Comentario</string>
    <string name="FotoCompartidaNot">Te han compartido una foto</string>
    <string name="HaCompartido">te ha compartido la foto</string>
    <string name="TocaRevisarCompartidas">, toca para revisar las fotos compartidas.</string>
    <string name="Etiquetas">Etiquetas:</string>
    <string name="CrearEtiqueta">Crear nueva etiqueta</string>
    <string name="IntroduceEtiqueta">Introduce una nueva etiqueta:</string>
    <string name="EscribirEtiqueta">Escribir etiqueta...</string>
    <string name="MantenteActivo">continúa añadiendo fotos, compartiéndolas con tus amigos y mucho más.</string>
    <string name="BuscarAmigosNot">Buscar amigos</string>
    <string name="MarcadoresNot">Añade marcadores</string>
    <string name="DescargarFoto">Descargar foto</string>
    <string name="SeguroDescargar">¿Estas seguro de que deseas descargar esta foto?</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="configure" translatable="false">Configure</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="MensajeWidget">Introduce las credenciales del usuario con el que crear el widget:</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="SubiendoFoto">Subiendo foto...</string>
    <string name="ObteniendoGeolocalizacion">Obteniendo geolocalización...</string>
    <string name="MonumentosTitulo">MONUMENTOS ALREDEDOR DEL MUNDO</string>
    <string name="Marcar">Marcar</string>
    <string name="Cambiar">Cambiar</string>
    <string name="AbrirCamara">Abrir Cámara</string>
    <string name="AbrirGaleria">Abrir Galería</string>
    <string name="EtiquetadoFallido">El etiquetado automático ha fallado.</string>

</resources>