<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/SubirFoto">
        <menu>
            <item
                android:id="@+id/camara"
                android:icon="@android:drawable/ic_menu_camera"
                android:title="@string/DesdeCamara" />
            <item
                android:id="@+id/galeria"
                android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/DesdeGaleria" />
        </menu>
    </item>
    <item android:title="@string/Guardados">
        <menu>
            <item
                android:id="@+id/compartidas"
                android:icon="@android:drawable/ic_input_get"
                android:title="@string/VerCompartidas" />
            <item
                android:id="@+id/puntos"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/PuntosInteres" />
        </menu>
    </item>
</menu>