<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/anadir"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/BuscarGente"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/amigos"
        android:icon="@drawable/amigos"
        android:title="@string/Amigos"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/preferencias"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/Preferencias"
        app:showAsAction="never" />

    <item
        android:id="@+id/cerrarSesion"
        android:title="@string/CerrarSesion"
        app:showAsAction="never" />

</menu>